aws/configurations/vpc-basics/01-basic/main.tf



resource "aws_vpc" "main" {
    tags = {
        Name = "basics"
    }
    cidr_block = "10.0.0.0/16"
    enable_dns_hostnames = true # default is false
    enable_dns_support = true # default is true
}

resource "aws_subnet" "private" {
    vpc_id  = aws_vpc.main.id
    cidr_block = "10.0.0.0/24"

    tags = {
        Name = "basics-private"
    }
}

resource "aws_subnet" "public" {
    vpc_id = aws_vpc.main.id
    cidr_block = "10.0.1.0/24"
    map_public_ip_on_launch = true

    tags = {
        Name = "basics-public"
    }
}

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "basics"
  }
}

resource "aws_route_table" "public" {
    vpc_id = aws_vpc.main.id
    tags = {
        Name = "basics-public"
    }
}

resource "aws_route" "to_internet" {
    route_table_id = aws_route_table.public.id
    destination_cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
}

resource "aws_route_table_association" "public" {
    route_table_id = aws_route_table.public.id
    subnet_id = aws_subnet.public.id
}
